--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swaagatinn",
+  "name": "Undiscover_India",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
+    "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.15.2"
