--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "express-session": "^1.18.2",
     "joi": "^18.0.0",
     "method-override": "^3.0.0",
-    "mongoose": "^8.15.2"
+    "mongoose": "^8.15.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
